Fix homepage header not having spacing above it due to duplicate rule

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -559,11 +559,12 @@ button a {
 
 /*-------------------------------Page Header*/
 .page-header, .homepage-header {
-    margin-top: 50px;
     text-align: center;
     max-width: 92%;
-    margin: 0 auto;
+    margin: 50px auto 0;
 }
+
+
 
 .page-header h2, .homepage-header h2{
     padding-top: 50px;
